# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./pages";
 export * from "./sections";
 export * from "./images";
+export * from "./settings";
